Fix MAGETWO-1993: javascript refactor - fixed sidebar and toobar for EE

--- a/app/code/core/Mage/CatalogSearch/view/frontend/form.mini.phtml
+++ b/app/code/core/Mage/CatalogSearch/view/frontend/form.mini.phtml
@@ -15,23 +15,23 @@
         <input id="search" type="text"
                name="<?php echo $this->helper('Mage_CatalogSearch_Helper_Data')->getQueryParamName() ?>"
                value="<?php echo $this->helper('Mage_CatalogSearch_Helper_Data')->getEscapedQueryText() ?>"
-               class="input-text"/>
+               class="input-text" autocomplete="off"/>
         <button type="submit" title="<?php echo $this->__('Search') ?>" class="button">
             <span><span><?php echo $this->__('Search') ?></span></span></button>
         <div id="search_autocomplete" class="search-autocomplete"></div>
         <script type="text/javascript">
-        //<![CDATA[
+            //<![CDATA[
 
-        mage.event.observe('mage.catalogsearch.initialize', function (e, o) {
-            o.searchFormId = '#search_mini_form';
-            o.searchFieldId = '#search';
-            o.emptyText = '<?php echo $this->__('Search entire store here...') ?>';
-            o.url = '<?php echo $this->helper('Mage_CatalogSearch_Helper_Data')->getSuggestUrl() ?>';
-            o.destinationId = '#search_autocomplete';
-        });
+            mage.event.observe('mage.catalogsearch.initialize', function (e, o) {
+                o.searchFormId = '#search_mini_form';
+                o.searchFieldId = '#search';
+                o.emptyText = '<?php echo $this->__('Search entire store here...') ?>';
+                o.url = '<?php echo $this->helper('Mage_CatalogSearch_Helper_Data')->getSuggestUrl() ?>';
+                o.destinationId = '#search_autocomplete';
+            });
 
-        mage.load.jsSync('/pub/lib/mage/components/catalogsearch/frontend/form_mini.js');
-        //]]>
+            mage.load.jsSync('/pub/lib/mage/components/catalogsearch/frontend/form_mini.js');
+            //]]>
         </script>
     </div>
 </form>
