--- a/app/design/frontend/default/modern/Mage_CatalogSearch/form.mini.phtml
+++ b/app/design/frontend/default/modern/Mage_CatalogSearch/form.mini.phtml
@@ -8,27 +8,30 @@
  * @license     {license_link}
  */
 ?>
-<form id="search_mini_form" action="<?php echo $this->helper('Mage_CatalogSearch_Helper_Data')->getResultUrl() ?>" method="get">
+<form id="search_mini_form" action="<?php echo $this->helper('Mage_CatalogSearch_Helper_Data')->getResultUrl() ?>"
+      method="get">
     <div class="form-search">
         <label for="search"><?php echo $this->__('Search') ?></label>
-        <input id="search" type="text" name="<?php echo $this->helper('Mage_CatalogSearch_Helper_Data')->getQueryParamName() ?>" value="<?php echo $this->helper('Mage_CatalogSearch_Helper_Data')->getEscapedQueryText() ?>" class="input-text" />
-        <button type="submit" title="<?php echo $this->__('Go') ?>" class="button"><span><span><?php echo $this->__('Go') ?></span></span></button>
+        <input id="search" type="text"
+               name="<?php echo $this->helper('Mage_CatalogSearch_Helper_Data')->getQueryParamName() ?>"
+               value="<?php echo $this->helper('Mage_CatalogSearch_Helper_Data')->getEscapedQueryText() ?>"
+               class="input-text" autocomplete="off"/>
+        <button type="submit" title="<?php echo $this->__('Go') ?>" class="button">
+            <span><span><?php echo $this->__('Go') ?></span></span></button>
         <div id="search_autocomplete" class="search-autocomplete"></div>
         <script type="text/javascript">
-        //<![CDATA[
-        mage.event.observe('mage.catalogsearch.initialize', function (e, o) {
-            o.searchFormId = '#search_mini_form';
-            o.searchFieldId = '#search';
-            o.emptyText = '<?php echo $this->__('Search entire store here...') ?>';
-            o.url = '<?php echo $this->helper('Mage_CatalogSearch_Helper_Data')->getSuggestUrl() ?>';
-            o.destinationId = '#search_autocomplete';
-        });
+            //<![CDATA[
+            mage.event.observe('mage.catalogsearch.initialize', function (e, o) {
+                o.searchFormId = '#search_mini_form';
+                o.searchFieldId = '#search';
+                o.emptyText = '<?php echo $this->__('Search entire store here...') ?>';
+                o.url = '<?php echo $this->helper('Mage_CatalogSearch_Helper_Data')->getSuggestUrl() ?>';
+                o.destinationId = '#search_autocomplete';
+            });
 
-        mage.load.jsSync('/pub/lib/mage/components/catalogsearch/frontend/form_mini.js');
+            mage.load.jsSync('/pub/lib/mage/components/catalogsearch/frontend/form_mini.js');
 
-
-
-        //]]>
+            //]]>
         </script>
     </div>
 </form>
