--- a/app/design/frontend/pro/default/Mage_Checkout/cart/sidebar.phtml
+++ b/app/design/frontend/pro/default/Mage_Checkout/cart/sidebar.phtml
@@ -15,54 +15,69 @@
  */
 
 ?>
-<?php if ($this->getIsNeedToDisplaySideBar()):?>
+<?php if ($this->getIsNeedToDisplaySideBar()): ?>
 <div class="block block-cart">
     <?php $_cartQty = $this->getSummaryCount() ?>
     <div class="block-title">
-        <?php if($_cartQty>0): ?>
-            <strong><span><?php echo $this->__('My Cart <small>(%s)</small>', $_cartQty) ?></span></strong>
+        <?php if ($_cartQty > 0): ?>
+        <strong><span><?php echo $this->__('My Cart <small>(%s)</small>', $_cartQty) ?></span></strong>
         <?php else: ?>
-            <strong><span><?php echo $this->__('My Cart') ?></span></strong>
+        <strong><span><?php echo $this->__('My Cart') ?></span></strong>
         <?php endif; ?>
     </div>
     <div class="block-content">
-    <?php $_items = $this->getRecentItems() ?>
-    <?php if(count($_items)): ?>
+        <?php $_items = $this->getRecentItems() ?>
+        <?php if (count($_items)): ?>
         <ol id="cart-sidebar" class="mini-products-list">
-        <?php foreach($_items as $_item): ?>
+            <?php foreach ($_items as $_item): ?>
             <?php echo $this->getItemHtml($_item) ?>
-        <?php endforeach; ?>
+            <?php endforeach; ?>
         </ol>
+        <script type="text/javascript">
+            mage.event.observe('mage.checkout.initialize', function (e, o) {
+                o.cartId = '#cart-sidebar',
+                    o.nonRecursive = 'nonRecursive',
+                    o.checkOutUrl = '<?php echo $this->getCheckoutUrl();?>',
+                    o.title = '<?php echo $this->__('Checkout') ?>',
+                    o.confirmMessage = '<?php echo $this->__('Are you sure you would like to remove this item from the shopping cart?') ?>',
+                    o.closeBtnTitle = '<?php echo $this->__('Remove This Item')?>';
+            });
+            mage.load.jsSync('/pub/lib/mage/decorate.js', '/pub/lib/mage/components/checkout/frontend/cart/sidebar.js');
+        </script>
         <?php else: ?>
         <p class="empty"><?php echo $this->__('You have no items in your shopping cart.') ?></p>
-    <?php endif ?>
-    <?php if ($_cartQty>0): ?>
+        <?php endif ?>
+        <?php if ($_cartQty > 0): ?>
         <div class="actions">
-                <div class="summary">
-                    <?php /*if ($_cartQty==1): ?>
+            <div class="summary">
+                <?php /*if ($_cartQty==1): ?>
                         <p class="amount"><?php echo $this->__('There is <a href="%s">1 item</a> in your cart.', $this->getUrl('checkout/cart')) ?></p>
                     <?php else: ?>
                         <p class="amount"><?php echo $this->__('There are <a href="%s">%s items</a> in your cart.', $this->getUrl('checkout/cart'), $_cartQty) ?></p>
                     <?php endif*/ ?>
-                    <p class="subtotal">
-                        <span class="label"><?php echo $this->__('Cart Subtotal:') ?></span>
+                <p class="subtotal">
+                    <span class="label"><?php echo $this->__('Cart Subtotal:') ?></span>
 
-                        <?php if ($this->canApplyMsrp()): ?>
-                            <span class="map-cart-sidebar-total"><?php echo $this->__('ORDER TOTAL WILL BE DISPLAYED BEFORE YOU SUBMIT THE ORDER'); ?></span>
-                        <?php else: ?>
-                            <?php echo Mage::helper('Mage_Checkout_Helper_Data')->formatPrice($this->getSubtotal()) ?>
-                            <?php if ($_subtotalInclTax = $this->getSubtotalInclTax()): ?>
-                                <br />(<?php echo Mage::helper('Mage_Checkout_Helper_Data')->formatPrice($_subtotalInclTax) ?> <?php echo Mage::helper('Mage_Tax_Helper_Data')->getIncExcText(true) ?>)
-                            <?php endif; ?>
+                    <?php if ($this->canApplyMsrp()): ?>
+                    <span
+                        class="map-cart-sidebar-total"><?php echo $this->__('ORDER TOTAL WILL BE DISPLAYED BEFORE YOU SUBMIT THE ORDER'); ?></span>
+                    <?php else: ?>
+                    <?php echo Mage::helper('Mage_Checkout_Helper_Data')->formatPrice($this->getSubtotal()) ?>
+                    <?php if ($_subtotalInclTax = $this->getSubtotalInclTax()): ?>
+                        <br/>
+                        (<?php echo Mage::helper('Mage_Checkout_Helper_Data')->formatPrice($_subtotalInclTax) ?> <?php echo Mage::helper('Mage_Tax_Helper_Data')->getIncExcText(true) ?>
+                        )
                         <?php endif; ?>
-                    </p>
-                </div>
-                <?php if($this->isPossibleOnepageCheckout()): ?>
-                    <button type="button" title="<?php echo $this->__('Checkout') ?>" class="button"><span><span><?php echo $this->__('Checkout') ?></span></span></button>
-                    <?php //echo $this->getChildHtml('extra_actions') ?>
-                <?php endif ?>
+                    <?php endif; ?>
+                </p>
+            </div>
+            <?php if ($this->isPossibleOnepageCheckout()): ?>
+            <button type="button" title="<?php echo $this->__('Checkout') ?>" class="button">
+                <span><span><?php echo $this->__('Checkout') ?></span></span></button>
+            <?php //echo $this->getChildHtml('extra_actions') ?>
+            <?php endif ?>
         </div>
-    <?php endif ?>
+        <?php endif ?>
     </div>
 </div>
-<?php endif;?>
+<?php endif; ?>
