Implemented MAGETWO-2512: UX changes on Export page - fixed bug in JS

--- a/app/code/core/Mage/ImportExport/view/adminhtml/export/form/before.phtml
+++ b/app/code/core/Mage/ImportExport/view/adminhtml/export/form/before.phtml
@@ -63,8 +63,8 @@
             if (entity != 'catalog_product') {
                 entity = 'customer';
             }
-            if (entity != this.previousEntity) {
-                this.previousEntity = entity;
+            if (entity != this.previousGridEntity) {
+                this.previousGridEntity = entity;
                 url += ((url.slice(-1) != '/') ? '/' : '') + 'entity/' + entity;
                 new Ajax.Request(url, {
                     method:      'post',
