Implemented MAGETWO-2504: Refactor entity nodes in config. Update entity adapter factory and behaviors constants - task implemented

--- a/app/code/core/Enterprise/ImportExport/view/adminhtml/scheduled/form/after.phtml
+++ b/app/code/core/Enterprise/ImportExport/view/adminhtml/scheduled/form/after.phtml
@@ -12,7 +12,7 @@
 <?php
 /** @var $operation Enterprise_ImportExport_Model_Scheduled_Operation */
 $operation = Mage::registry('current_operation');
-$entitySubtype = $operation->getEntitySubtype();
+$entitySubtype = 'deleted';
 $operationType = $operation->getOperationType();
 $entityBehavior = $operation->getBehavior();
 
