Implemented MAGETWO-2509: Rename V2 classes - renamed files, - fixed integration and unit tests

--- a/app/code/core/Mage/ImportExport/view/adminhtml/import/form/before.phtml
+++ b/app/code/core/Mage/ImportExport/view/adminhtml/import/form/before.phtml
@@ -145,7 +145,7 @@
             this.showCustomerEntity(false);
             this.showUploadFile(false);
             switch ($F('entity')) {
-                case 'customer':
+                case 'customer_aggregate':
                     this.showFormatVersion(true);
                     break;
                 case 'catalog_product':
