Implemented MAGETWO-2511: UX changes on Import page - fixed small bug

--- a/app/code/core/Mage/ImportExport/view/adminhtml/import/form/before.phtml
+++ b/app/code/core/Mage/ImportExport/view/adminhtml/import/form/before.phtml
@@ -37,7 +37,7 @@
     /**
      * Show behavior selector
      *
-     * @param string|boolean behaviorFieldset If false, then hide all behavior selectors
+     * @param string|boolean entity If false, then hide all behavior selectors
      * @return void
      */
     varienForm.prototype.showBehavior = function(entity)
@@ -52,7 +52,7 @@
     /**
      * Show/hide one behavior fieldset
      *
-     * @param string behaviorFieldset
+     * @param string behavior
      * @param boolean isShow
      * @return void
      */
