--- a/app/code/core/Enterprise/ImportExport/view/adminhtml/scheduled/form/before.phtml
+++ b/app/code/core/Enterprise/ImportExport/view/adminhtml/scheduled/form/before.phtml
@@ -8,9 +8,6 @@
  * @license     {license_link}
  */
 ?>
-<?php
-    $exportVersionTwo = (int) Mage_ImportExport_Model_Source_Format_Version::VERSION_2;
-?>
 <script type="text/javascript">
 //<![CDATA[
     /**
@@ -20,14 +17,19 @@
      */
     varienForm.prototype.previousGridEntity = '';
 
-    /**#@+
-     * Behavior version constants
+    /**
+     * List of existing behavior sets
      *
-     * @type string
+     * @var array
      */
-    varienForm.prototype.BEHAVIOR_VERSION_1 = 'behaviour_v1';
-    varienForm.prototype.BEHAVIOR_VERSION_2_CUSTOMER = 'behaviour_v2_customer';
-    /**#@-*/
+    varienForm.prototype.uniqueBehaviors = <?php echo $this->getUniqueBehaviors() ?>;
+
+    /**
+     * Behaviour codes for import entities
+     *
+     * @var array
+     */
+    varienForm.prototype.entityBehaviors = <?php echo $this->getEntityBehaviors() ?>;
 
     /**
      * Show and activate row
@@ -57,104 +59,33 @@
     /**
      * Show behavior selector
      *
-     * @param string|boolean behaviorVersion If false, then hide both behavior selectors
+     * @param string|boolean entity If false, then hide all behavior selectors
      * @return void
      */
-    varienForm.prototype.showBehavior = function(behaviorVersion)
+    varienForm.prototype.showBehavior = function(entity)
     {
-        if (behaviorVersion == this.BEHAVIOR_VERSION_1) {
-            this.activateRow('behavior_v1');
-            this.deactivateRow('behavior_v2_customer');
-        } else if (behaviorVersion == this.BEHAVIOR_VERSION_2_CUSTOMER) {
-            this.deactivateRow('behavior_v1');
-            this.activateRow('behavior_v2_customer');
-        } else {
-            this.deactivateRow('behavior_v1');
-            this.deactivateRow('behavior_v2_customer');
+        var requiredBehavior = this.entityBehaviors[entity];
+        for (i = 0; i < this.uniqueBehaviors.length; i++) {
+            var currentBehavior = this.uniqueBehaviors[i];
+            if (requiredBehavior == currentBehavior) {
+                this.activateRow(currentBehavior);
+            } else {
+                this.deactivateRow(currentBehavior);
+            }
         }
     };
 
     /**
-     * Show import format version selector
-     *
-     * @param boolean isShow
-     * @return void
-     */
-    varienForm.prototype.showFormatVersion = function(isShow)
-    {
-        if (isShow == true) {
-            this.activateRow('file_format_version');
-        } else {
-            this.deactivateRow('file_format_version');
-        }
-    };
-
-    /**
-     * Show customer entity selector
-     *
-     * @param boolean isShow
-     * @return void
-     */
-    varienForm.prototype.showCustomerEntity = function(isShow)
-    {
-        if (isShow == true) {
-            this.activateRow('entity_subtype');
-        } else {
-            this.deactivateRow('entity_subtype');
-        }
-    };
-
-    /**
-     * Handle value change in entity type selector for import
+     * Handle value change in entity type selector (only for import)
      *
      * @return void
      */
-    varienForm.prototype.handleImportEntityTypeSelector = function()
+    varienForm.prototype.handleEntityTypeSelector = function()
     {
         if ($('entity') && $F('entity')) {
-            this.showFormatVersion(false);
-            this.showBehavior(false);
-            this.showCustomerEntity(false);
-            switch ($F('entity')) {
-                case 'customer':
-                    this.showFormatVersion(true);
-                    break;
-                case 'catalog_product':
-                    this.showBehavior(this.BEHAVIOR_VERSION_1);
-                    break;
-                default:
-                    break;
-            }
-        } else {
-            this.showFormatVersion(false);
-            this.showBehavior(false);
-            this.showCustomerEntity(false);
-        }
-    };
-
-    /**
-     * Handle value change in import format version selector
-     *
-     * @return void
-     */
-    varienForm.prototype.handleImportFormatVersionSelector = function()
-    {
-        if ($('file_format_version') && $F('file_format_version')) {
-            switch ($F('file_format_version')) {
-                case '<?php echo Mage_ImportExport_Model_Source_Format_Version::VERSION_1 ?>':
-                    this.showBehavior(this.BEHAVIOR_VERSION_1);
-                    this.showCustomerEntity(false);
-                    break;
-                case '<?php echo Mage_ImportExport_Model_Source_Format_Version::VERSION_2 ?>':
-                    this.showBehavior(this.BEHAVIOR_VERSION_2_CUSTOMER);
-                    this.showCustomerEntity(true);
-                    break;
-                default:
-                    break;
-            }
+            this.showBehavior($F('entity'));
         } else {
             this.showBehavior(false);
-            this.showCustomerEntity(false);
         }
     };
 
