Implemented MAGETWO-2335: Information entered before changing attribute set isn't saved

--- a/app/code/core/Mage/Adminhtml/view/adminhtml/catalog/product/change_attribute_set_widget.phtml
+++ b/app/code/core/Mage/Adminhtml/view/adminhtml/catalog/product/change_attribute_set_widget.phtml
@@ -14,6 +14,11 @@
     'use strict';
     $(function() {
         $('#product_edit_form').bind('product:changeAttributeSet', function(event, attributeSetId) {
+            if ($('.tab-item-link.ajax.changed').length > 0
+                && !confirm('Some data will be not saved. Perform attribute set change anyway?')
+            ) {
+                return false;
+            }
             var $form = $(this);
             var uri = document.location.href.replace(/(\/|&|\?)?\bset(\/|=)\d+/g, '').replace('#', '');
             uri += /\?/.test(uri) ? '&' : '?';
