--- a/app/design/frontend/enterprise/iphone/skin/default/css/custom.css
+++ b/app/design/frontend/enterprise/iphone/skin/default/css/custom.css
@@ -1,3 +1,12 @@
+/**
+ * {license_notice}
+ *
+ * @category   design
+ * @package    enterprise_iphone
+ * @copyright  {copyright}
+ * @license    {license_link}
+ */
+
 /* Theme options */
 
 /* Links Color */
