Fixed MAGETWO-2706: Payment Bridge form isn't loaded when creating order from backend

--- a/app/code/core/Enterprise/Pbridge/view/adminhtml/sales/order/create/iframe.phtml
+++ b/app/code/core/Enterprise/Pbridge/view/adminhtml/sales/order/create/iframe.phtml
@@ -7,3 +7,9 @@
  * @copyright   {copyright}
  * @license     {license_link}
  */
+?>
+
+<iframe src="<?php echo $this->getSourceUrl() ?>"
+    height="350" width="100%" marginheight="0" marginwidth="0"
+    scrolling="no" frameborder="0"
+    style="border:0 none"></iframe>
