--- a/app/code/core/Enterprise/Pbridge/view/frontend/checkout/payment/iframe.phtml
+++ b/app/code/core/Enterprise/Pbridge/view/frontend/checkout/payment/iframe.phtml
@@ -8,3 +8,10 @@
  * @license     {license_link}
  */
 ?>
+
+<iframe src="<?php echo $this->getSourceUrl() ?>"
+        height="<?php echo $this->getIframeHeight() ?>"
+        width="<?php echo $this->getIframeWidth() ?>"
+        marginheight="0" marginwidth="0"
+        scrolling="<?php echo $this->getScrolling() ?>" frameborder="0"
+        style="border:0 none"></iframe>
