--- a/app/code/core/Enterprise/Staging/view/adminhtml/staging/merge/settings/website.phtml
+++ b/app/code/core/Enterprise/Staging/view/adminhtml/staging/merge/settings/website.phtml
@@ -64,18 +64,25 @@
                             </button>
                         </span>
                         <span>
-                            <img style="" title="Select Date" id="schedule_merge_later_trig" class="v-middle" alt="" src="<?php echo $this->getSkinUrl("images/grid-cal.gif");?> "/>
+                            <!--<img style="" title="Select Date" id="schedule_merge_later_trig" class="v-middle" alt="" src="<?php echo $this->getSkinUrl("images/grid-cal.gif");?> "/>-->
                             <input type="text" style="width: 120px;" class="schedule_merge_later schedule_merge_empty input-text" title="Set Staging Merge Date" value="" id="schedule_merge_later" name="schedule_merge_later"/>
                             <script type="text/javascript">
                             //<![CDATA[
-                                Calendar.setup({
+                            (function( $ ) {
+                                $('#schedule_merge_later').calendar({
+                                    buttonImage: "<?php echo $this->getSkinUrl("images/grid-cal.gif");?>",
+                                    buttonText: "<?php echo $this->__('Select Date') ?>"
+                                })
+                            })(jQuery)
+
+                                /*Calendar.setup({
                                     inputField: "schedule_merge_later",
                                     ifFormat: "%m/%e/%Y %H:%M:%S",
                                     showsTime: true,
                                     button: "schedule_merge_later_trig",
                                     align: "Bl",
                                     singleClick : true
-                                });
+                                });*/
                             //]]>
                             </script>
                         </span>
