--- a/app/code/core/Mage/Adminhtml/view/adminhtml/report/grid.phtml
+++ b/app/code/core/Mage/Adminhtml/view/adminhtml/report/grid.phtml
@@ -42,14 +42,14 @@ $numColumns = sizeof($this->getColumns());
         <table cellspacing="0" class="actions">
             <tr>
         <?php if($this->getDateFilterVisibility()): ?>
-            <td class="a-left filter">
+            <td class="a-left filter" id="period_date_range">
                 <div class="f-left">
-                    <div><?php echo $this->__('From') ?>:&nbsp;<input class="input-text no-changes required-entry" type="text" id="period_date_from" name="report_from" value="<?php echo $this->getFilter('report_from') ?>" style="width:5em" /> <img src="<?php echo $this->getSkinUrl('images/grid-cal.gif') ?>" title="<?php echo $this->__('Select Date') ?>" id="period_date_from_trig" alt="<?php echo $this->__('Select Date') ?>" class="v-middle"/>&nbsp;&nbsp;</div>
+                    <div><?php echo $this->__('From') ?>:&nbsp;<input class="input-text no-changes required-entry" type="text" id="period_date_from" name="report_from" value="<?php echo $this->getFilter('report_from') ?>" style="width:5em" /> <!--<img src="<?php echo $this->getSkinUrl('images/grid-cal.gif') ?>" title="<?php echo $this->__('Select Date') ?>" id="period_date_from_trig" alt="<?php echo $this->__('Select Date') ?>" class="v-middle"/>-->&nbsp;&nbsp;</div>
                     <div id="period_date_from_advaice"></div>
                 </div>
 
                 <div class="f-left">
-                    <div><?php echo $this->__('To') ?>:&nbsp;<input  class="input-text no-changes required-entry" type="text" id="period_date_to" name="report_to"  value="<?php echo $this->getFilter('report_to') ?>" style="width:5em" /> <img src="<?php echo $this->getSkinUrl('images/grid-cal.gif') ?>" class="v-middle" title="<?php echo $this->__('Select Date') ?>"id="period_date_to_trig" alt="<?php echo $this->__('Select Date') ?>"/>&nbsp;&nbsp;</div>
+                    <div><?php echo $this->__('To') ?>:&nbsp;<input  class="input-text no-changes required-entry" type="text" id="period_date_to" name="report_to"  value="<?php echo $this->getFilter('report_to') ?>" style="width:5em" /> <!--<img src="<?php echo $this->getSkinUrl('images/grid-cal.gif') ?>" class="v-middle" title="<?php echo $this->__('Select Date') ?>"id="period_date_to_trig" alt="<?php echo $this->__('Select Date') ?>"/>-->&nbsp;&nbsp;</div>
                     <div id="period_date_to_advaice"></div>
                 </div>
 
@@ -64,7 +64,20 @@ $numColumns = sizeof($this->getColumns());
                 </div>
                 <script type="text/javascript">
                 <!--
-                Calendar.setup({
+                (function( $ ) {
+                    $("#period_date_range").date_range({
+                        //dateFormat: "'.$format.'",
+                        buttonImage: "<?php echo $this->getSkinUrl('images/grid-cal.gif') ?>",
+                        buttonText: "<?php echo $this->__('Select Date') ?>",
+                        from: {
+                            id: "period_date_from"
+                        },
+                        to: {
+                            id: "period_date_to"
+                        }
+                    })
+                })(jQuery)
+                /*Calendar.setup({
                     inputField : 'period_date_from',
                     ifFormat : '<?php echo $this->getDateFormat() ?>',
                     button : 'period_date_from_trig',
@@ -77,7 +90,7 @@ $numColumns = sizeof($this->getColumns());
                     button : 'period_date_to_trig',
                     align : 'Bl',
                     singleClick : true
-                });
+                });*/
                 //-->
                 </script>
             </td>
