Implemented MAGETWO-2573: Migration of js Calendar on jQuery - Remove obsolete calendar initialisation from .phtml and .php files

--- a/app/code/core/Mage/Adminhtml/view/adminhtml/page/js/calendar.phtml
+++ b/app/code/core/Mage/Adminhtml/view/adminhtml/page/js/calendar.phtml
@@ -43,7 +43,7 @@
             buttonImageOnly: true,
             showButtonPanel: true,
             showWeek: true,
-            timeFormat: 'hh:mm z',
+            timeFormat: '',
             showTime: false,
             showHour: false,
             showMinute: false,
