--- a/app/code/core/Mage/Adminhtml/view/adminhtml/catalog/product/edit.phtml
+++ b/app/code/core/Mage/Adminhtml/view/adminhtml/catalog/product/edit.phtml
@@ -108,6 +108,38 @@ Event.observe(window, 'load', function() {
         product_info_tabsJsTabs.showTabContent(obj);
     }
     Product.AttributesBridge.setTabsObject(product_info_tabsJsTabs);
+    //SKU auto-population
+    (function ($) {
+        var _populateSkuField = function (e) {
+            var matches = e.data.matches, skuMask = e.data.skuMask, matchesCount = e.data.matchesCount;
+            for (var i = 0; i < matchesCount; i++) {
+                skuMask = skuMask.replace(matches[i], $('#' + matches[i].slice(2, -2)).val());
+            }
+            skuField.val(skuMask);
+        };
+
+        var skuMask = <?php echo json_encode(Mage::helper('Mage_Catalog_Helper_Product')->getSkuAutogenerationMask())?>,
+            matches = skuMask.match(/{{(\w+?)}}/g),
+            skuField = $('#sku');
+        if (null !== matches && '' === skuField.val()) {
+            var matchesCount = matches.length;
+            //Initial sku population
+            _populateSkuField({data:{'skuMask':skuMask, 'matches':matches, 'matchesCount':matchesCount}});
+            //Event binding for each needed field
+            for (var i = 0; i < matchesCount; i++) {
+                var inputId = matches[i].slice(2, -2);
+                $('#' + inputId).bind('keyup', {'skuMask':skuMask, 'matches':matches, 'matchesCount':matchesCount},
+                    _populateSkuField);
+            }
+            //Unbind events in case of sku field manual change
+            skuField.bind('change', function () {
+                for (i = 0; i < matchesCount; i++) {
+                    var inputId = matches[i].slice(2, -2);
+                    $('#' + inputId).unbind('keyup', _populateSkuField);
+                }
+            });
+        }
+    })(jQuery);
 });
 
 Validation.addAllThese([
