Implemented MAGETWO-2573: Migration of js Calendar on jQuery - Move calendar initialization after tag </span> in app/code/core/Mage/Adminhtml/view/adminhtml/wizard.phtml - Remove calendar scripts  from app/code/core/Mage/Oauth/view/adminhtml/layout.xml - Remove licalTimezone and serverTimezoneSeconds fields from calendar configuration in app/code/core/Mage/Page/view/frontend/js/calendar.phtml -

--- a/app/code/core/Mage/Page/view/frontend/js/calendar.phtml
+++ b/app/code/core/Mage/Page/view/frontend/js/calendar.phtml
@@ -44,9 +44,7 @@
             timeFormat: '',
             showTime: false,
             showHour: false,
-            showMinute: false,
-            localTimezone: <?php echo $this->getTimezoneOffsetSeconds() ?>,
-            serverTimezoneSeconds:<?php echo $this->getStoreTimestamp() ?>
+            showMinute: false
         }
     });
 })( jQuery );
